fixed border and text spacing

--- a/Sensory_Space/style.css
+++ b/Sensory_Space/style.css
@@ -3,10 +3,10 @@
 }
 
 #borderimg {
-  border: 30px solid transparent;
-  padding: 100px;
+  border: 1px solid transparent;
+  padding: 50px;
   border-image: url(images/border.png);
-  border-image-width: 100rem 30rem;
+  border-image-width: 100rem 35rem;
 }
 
 body {
